--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix .",
-    "server": "json-server -w db.json -p 3001"
+    "lint:fix": "eslint --fix ."
+
   },
   "eslintConfig": {
     "extends": [
