--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "axios": "^1.5.1",
+    "classnames": "^2.3.2",
+    "fwt-internship-uikit": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
@@ -27,7 +29,6 @@
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
-
   },
   "eslintConfig": {
     "extends": [
