--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^18.2.13",
     "axios": "^1.5.1",
     "classnames": "^2.3.2",
+    "clsx": "^2.0.0",
     "dom": "^0.0.3",
     "fwt-internship-uikit": "^1.0.2",
     "react": "^18.2.0",
