--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nikizak34.github.io/gallery",
   "dependencies": {
     "@radix-ui/colors": "^3.0.0",
-    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-scroll-area": "^1.0.5",
@@ -21,7 +21,7 @@
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
     "dom": "^0.0.3",
-    "fwt-internship-uikit": "^1.0.2",
+    "gh-pages": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
@@ -36,6 +36,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
