--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview" ,
+    "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
