--- a/package.json
+++ b/package.json
@@ -37,9 +37,8 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview" ,
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build",
+    "preview": "vite preview",
+    "deploy": "vite build && gh-pages -d dist",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
